<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_catalogo">

    <fragment
        android:id="@+id/nav_dosimetro"
        android:name="com.tfg.apptfg.ui.dosimetro.DosimetroFragment"
        android:label="@string/menu_dosimetro"
        tools:layout="@layout/fragment_dosimetro" />
    <fragment
        android:id="@+id/nav_mezclas"
        android:name="com.tfg.apptfg.ui.mezclas.MezclasFragment"
        android:label="@string/menu_mezclas"
        tools:layout="@layout/fragment_mezclas" />
    <fragment
        android:id="@+id/nav_catalogo"
        android:name="com.tfg.apptfg.ui.catalogo.CatalogoFragment"
        android:label="@string/menu_catalogo"
        tools:layout="@layout/fragment_catalogo" />

</navigation>