<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:useDefaultMargins="true"
    tools:context=".InicioActivity"
    android:rowCount="5">

        <TextView
            android:id="@+id/bienvenida_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="0"
            android:text="@string/bienvenida"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:textColor="@color/gris"
            android:textSize="50sp"
            android:textStyle="bold" />


        <ImageView
            android:id="@+id/inicio_img"
            android:layout_width="wrap_content"
            android:layout_height="494dp"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:src="@drawable/logo" />

        <Button
            android:id="@+id/login_btn"
            android:layout_width="350dp"
            android:layout_height="70dp"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_gravity="center"
            android:backgroundTint="@color/turquesa"
            android:text="@string/login"
            android:textSize="22sp"
            app:cornerRadius="30dp" />

        <Button
            android:id="@+id/signup_btn"
            android:layout_width="350dp"
            android:layout_height="70dp"
            android:layout_row="4"
            android:layout_column="0"
            android:layout_gravity="center"
            android:backgroundTint="@color/turquesa"
            android:text="@string/signup"
            android:textSize="22sp"
            app:cornerRadius="30dp" />

        <View
            android:id="@+id/or_line"
            android:layout_width="wrap_content"
            android:layout_height="2dp"
            android:layout_row="3"
            android:layout_column="0"
            android:layout_gravity="left"
            android:layout_marginStart="24dp"
            android:layout_marginTop="25dp"
            android:layout_margin="6dp"
            android:background="@color/azul_electrico" />

        <TextView
            android:id="@+id/o"
            android:background="@color/white"
            android:layout_row="3"
            android:layout_column="0"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/o"
            android:textAlignment="center"
            android:textColor="@color/azul_electrico"
            android:textSize="20sp"
            android:padding="8dp"
            android:textStyle="bold"/>

</GridLayout>