<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".LoginActivity"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@drawable/fondo"
    android:useDefaultMargins="true">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_login"
        style="@style/CardViewPrincipal"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline1"
        app:layout_constraintVertical_bias="0.45">

        <RelativeLayout
            android:id="@+id/form_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:padding="25dp">

            <TextView
                android:id="@+id/login_title"
                style="@style/Titulo"
                android:text="@string/login_title" />

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/login_title">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_login_email"
                    style="@style/TextInputLayout.EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_row="1"
                    android:layout_marginTop="15dp"
                    app:endIconDrawable="@drawable/ic_borrar"
                    app:endIconMode="clear_text"
                    app:helperTextTextColor="@color/rojo"
                    app:startIconDrawable="@drawable/ic_email">

                    <EditText
                        android:id="@+id/et_login_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints="emailAddress"
                        android:hint="@string/email_placeholder"
                        android:imeOptions="actionNext"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/gris" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_login_password"
                    style="@style/TextInputLayout.EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_row="2"
                    android:layout_column="0"
                    android:layout_marginTop="25dp"
                    app:helperTextTextColor="@color/rojo"
                    app:passwordToggleEnabled="true"
                    app:startIconDrawable="@drawable/ic_password">

                    <EditText
                        android:id="@+id/et_login_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints="password"
                        android:hint="@string/password_placeholder"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword"
                        android:textColor="@color/gris" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/bt_login_submit"
                    style="@style/BotonPrincipal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="3"
                    android:layout_column="0"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="23dp"
                    android:text="@string/continuar_bt"
                    app:icon="@drawable/ic_verificado" />
            </GridLayout>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/img_login_layout"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:contentDescription="@string/descripcion_personal_img"
        android:src="@drawable/ic_login"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="@+id/guideline2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15"/>
    
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.7"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.95" />
</androidx.constraintlayout.widget.ConstraintLayout>
